--- a/assets/scss/bio.scss
+++ b/assets/scss/bio.scss
@@ -31,7 +31,7 @@ $color_1: #6c6969;
 }
 
 .letter-01 {
-    letter-spacing: 0.01em;
+    letter-spacing: 0.01em !important;
 }
 
 .text_normal {
@@ -48,4 +48,17 @@ $color_1: #6c6969;
     .header_logo {
         width: 180px;
     }
+        .max_pra_content_one {
+            max-width: 576px;
+        }
+    
+        .max_pra_content_Two {
+            max-width: 572px;
+        }
+}
+.main-container{
+        max-width: 1440px;
+}
+.text-justify {
+    text-align: justify !important;
 }
