--- a/assets/scss/bio.scss
+++ b/assets/scss/bio.scss
@@ -62,3 +62,12 @@ $color_1: #6c6969;
 .text-justify {
     text-align: justify !important;
 }
+.font_uppercase{
+    text-transform: uppercase !important ;
+}
+.letter-03{
+    letter-spacing: 0.3em !important;
+}
+.line-height-h2{
+    line-height: 100% !important;
+}
