--- a/assets/scss/bio.scss
+++ b/assets/scss/bio.scss
@@ -5,7 +5,70 @@
   list-style: none;
   text-decoration: none !important;
 }
-
+.bio_logo {
+  width: 180px;
+  @media (max-width: 992px) {
+    width: 110px;
+  }
+  @media (max-width: 992px) {
+    width: 70px;
+  }
+  @media (max-width: 575.9px) {
+    width: 48px;
+  }
+}
+.menu_icon {
+  z-index: 110;
+  width: 30px;
+}
+.mobile-nav-icon {
+  max-width: 20px;
+  position: relative;
+  z-index: 120;
+}
+.bio_nav_links {
+  position: fixed;
+  top: 0;
+  left: -100%;
+  width: 100%;
+  height: 100vh;
+  background: #000;
+  justify-content: center;
+  align-items: center;
+  margin-top: 0 !important;
+  z-index: 10;
+  transition: all 0.5s ease-in-out;
+  li {
+    position: relative;
+    transition: all 0.5s ease-in-out;
+    a {
+      font-weight: 700;
+      font-size: 16px;
+      letter-spacing: -0.01em;
+      color: #ffffff;
+      // opacity: 0.5;
+      padding: 8px 0;
+      display: block;
+      transition: all 0.3s ease-in-out;
+    }
+    :hover {
+      opacity: 100%;
+    }
+    :after {
+      content: "";
+      position: absolute;
+      width: 0px;
+      height: 1px;
+      background-color: #fe6a5b;
+      left: -40px;
+      top: 50%;
+      transition: all 0.3s ease-in-out;
+    }
+    :hover:after {
+      width: 30px;
+    }
+  }
+}
 .color_red {
   color: #fe6a5b;
 }
